# mesa

./: .gitignore  README.rst  VERSION  hasvk-test.sh  meson-cross-i386.ini  meson.build  meson.options  meson_options.txt  setup-debian-78-32.sh
.github/workflows/: intel-78.yml
docs/: envvars.rst  meson.rst
docs/gallium/: screen.rst
src/amd/llvm/: ac_llvm_build.h
src/compiler/glsl/: glsl_to_nir.cpp
src/compiler/nir/: nir_lower_cooperative_matrix.c  nir_lower_gs_intrinsics.c  nir_lower_io_to_vector.c
src/imagination/vulkan/: pvr_formats.c
src/intel/blorp/: blorp_clear.c  blorp_genX_exec_brw.h  blorp_genX_exec_hasvk.h
src/intel/compiler/: brw_nir.c
src/intel/dev/: intel_debug.c  intel_debug.h
src/intel/genxml/: gen70.xml  gen75.xml  gen_pack_header.py  hasvk_gen7.xml  hasvk_gen75.xml  hasvk_gen8.xml  hasvk_genX_pack.h  hasvk_genX_video_pack.h  meson.build
src/intel/isl/: isl.c  isl.h  isl_emit_depth_stencil.c  isl_format.c  isl_gfx7.c
src/intel/perf/: gen_perf.py  intel_perf.c  intel_perf.h
src/intel/tools/: intel_measure.py
src/intel/vulkan/: anv_formats.c  anv_physical_device.c  anv_video.c  genX_cmd_video_enc.c
src/intel/vulkan_hasvk/: INTEL_DEBUG.md  VA_API_INTEGRATION_PLAN.md  anv_allocator.c  anv_android.c  anv_android.h  anv_android_stubs.c  anv_batch_chain.c  anv_blorp.c  anv_cmd_buffer.c  anv_descriptor_set.c  anv_device.c  anv_formats.c  anv_gem.c  anv_gem_stubs.c  anv_genX.h  anv_image.c  anv_measure.c  anv_measure.h  anv_nir.h  anv_nir_apply_pipeline_layout.c  anv_nir_compute_push_layout.c  anv_nir_lower_multiview.c  anv_nir_lower_ubo_loads.c  anv_nir_lower_ycbcr_textures.c  anv_perf.c  anv_pipeline.c  anv_pipeline_cache.c  anv_private.h  anv_queue.c  anv_util.c  anv_utrace.c  anv_video.c  anv_video_cross_device.c  anv_video_cross_device.h  anv_video_vaapi_bridge.c  anv_video_vaapi_bridge.h  anv_video_vaapi_h264.c  anv_video_vdpau_bridge.c  (+20 more)
src/intel/vulkan_hasvk/intel-vaapi-driver/: AUTHORS  meson.build
src/intel/vulkan_hasvk/intel-vaapi-driver/src/: gen8_post_processing.c  gen9_hevc_encoder.c  gen9_post_processing.c  i965_decoder_utils.c  i965_decoder_utils.h  i965_drv_video.c  i965_drv_video.h  i965_format_utils.h  i965_output_wayland.c  intel_driver.h  meson.build  vp9_probs.c  wayland-drm.xml
src/intel/vulkan_hasvk/intel-vaapi-driver/src/shaders/h264/ildb/: AVC_ILDB.inc  AVC_ILDB_Child_Field_UV.asm  AVC_ILDB_Child_Field_Y.asm  AVC_ILDB_Child_Mbaff_UV.asm  AVC_ILDB_Child_Mbaff_Y.asm  AVC_ILDB_Child_UV.asm  AVC_ILDB_Child_Y.asm  AVC_ILDB_Chroma_Core.asm  AVC_ILDB_Chroma_Core_Mbaff.asm  AVC_ILDB_CloseGateway.asm  AVC_ILDB_Dep_Check.asm  AVC_ILDB_Filter_Mbaff_UV_h.asm  AVC_ILDB_Filter_Mbaff_UV_v.asm  AVC_ILDB_Filter_Mbaff_Y_h.asm  AVC_ILDB_Filter_Mbaff_Y_v.asm  AVC_ILDB_Filter_UV_h.asm  AVC_ILDB_Filter_UV_v.asm  AVC_ILDB_Filter_Y_h.asm  AVC_ILDB_Filter_Y_v.asm  AVC_ILDB_ForwardMsg.asm  AVC_ILDB_LumaThrdLimit.asm  AVC_ILDB_Luma_Core.asm  AVC_ILDB_Luma_Core_Mbaff.asm  AVC_ILDB_OpenGateway.asm  AVC_ILDB_Root_Field_UV.asm  AVC_ILDB_Root_Field_Y.asm  AVC_ILDB_Root_Mbaff_UV.asm  AVC_ILDB_Root_Mbaff_Y.asm  AVC_ILDB_Root_UV.asm  AVC_ILDB_Root_Y.asm  AVC_ILDB_Spawn.asm  AVC_ILDB_SpawnChild.asm  AVC_ILDB_SpawnChromaRoot.asm  Child_Undefs.inc  ILDB_header.inc  Load_ILDB_Cntrl_Data.asm  Load_ILDB_Cntrl_Data_16DW.asm  Load_ILDB_Cntrl_Data_22DW.asm  Load_ILDB_Cntrl_Data_64DW.asm  Root_Undefs.inc  (+45 more)
src/intel/vulkan_hasvk/intel-vaapi-driver/src/shaders/h264/mc/: AVCMCInter.asm  AllAVC.asm  AllAVCField.asm  AllAVCFrame.asm  AllAVCMBAFF.asm  AllAVC_Build.inc  AllAVC_Export.inc  AllIntra.asm  BSDReset.asm  DCResetDummy.asm  Decode_Chroma_Intra.asm  EndIntraThread.asm  HwmcOnlyHeader.inc  Intra_16x16.asm  Intra_4x4.asm  Intra_8x8.asm  Intra_PCM.asm  Intra_funcLib.asm  Scoreboard_header.inc  SetHWScoreboard.asm  SetHWScoreboard_MBAFF.asm  SetHWScoreboard_header.inc  SetupForHWMC.asm  add_Error_16x16_Y.asm  add_Error_UV.asm  chromaMVAdjust.asm  header.inc  initialize_MBPara.asm  inter_Header.inc  interpolate_C_2x2.asm  interpolate_C_4x4.asm  interpolate_Y_4x4.asm  interpolate_Y_8x8.asm  intra_Header.inc  intra_Pred_4x4_Y_4.asm  intra_Pred_8x8_Y.asm  intra_Pred_Chroma.asm  intra_pred_16x16_Y.asm  loadRef_C_10x5.asm  loadRef_C_6x3.asm  (+25 more)
src/intel/vulkan_hasvk/intel-vaapi-driver/src/shaders/post_processing/gen7/: EOT.g4a  PA_AVS_Buf_0.g4a  PA_AVS_Buf_1.g4a  PA_AVS_Buf_2.g4a  PA_AVS_Buf_3.g4a  PL2_AVS_Buf_0.g4a  PL2_AVS_Buf_1.g4a  PL2_AVS_Buf_2.g4a  PL2_AVS_Buf_3.g4a  PL3_AVS_Buf_0.g4a  PL3_AVS_Buf_1.g4a  PL3_AVS_Buf_2.g4a  PL3_AVS_Buf_3.g4a  Save_AVS_NV12.g4a  Save_AVS_PA.g4a  Save_AVS_PL3.g4a  Save_AVS_RGB.g4a  Set_AVS_Buf_0123_BGRA.g4a  Set_AVS_Buf_0123_PL2.g4a  Set_AVS_Buf_0123_PL3.g4a  Set_AVS_Buf_0123_VUYA.g4a  Set_AVS_Buf_0123_VYUA.g4a  Set_Layer_0.g4a  VP_Setup.g4a  avs.g75b  pa_to_pa.g75b  pa_to_pa.g7b  pa_to_pl2.g75b  pa_to_pl2.g7b  pa_to_pl3.g75b  pa_to_pl3.g7b  pl2_to_pa.g75b  pl2_to_pa.g7b  pl2_to_pl2.g7b  pl2_to_pl3.g75b  pl2_to_pl3.g7b  pl2_to_rgbx.g75b  pl2_to_rgbx.g7b  pl3_to_pa.g75b  pl3_to_pa.g7b  (+6 more)
src/intel/vulkan_hasvk/libva/: meson.build
src/intel/vulkan_hasvk/libva/va/: va.h.wrapper  va_backend.h.wrapper  va_backend_prot.h.wrapper  va_backend_vpp.h.wrapper
src/intel/vulkan_hasvk/libva/va/drm/: va_drm_utils.c
src/intel/vulkan_hasvk/libvdpau/: meson.build
src/intel/vulkan_hasvk/libvdpau/src/: meson.build  util.h  vdpau_wrapper.c
src/intel/vulkan_hasvk/libvdpau/test/: dlclose.c
src/intel/vulkan_hasvk/libvdpau/trace/: vdpau_trace.cpp
src/intel/vulkan_hasvk/libvdpau_va_gl/: api-bitmap-surface.c  api-csc-matrix.c  api-device.c  api-output-surface.c  api-presentation-queue.c  api-video-decoder.c  api-video-mixer.c  api-video-surface.c  api.h  bitstream.c  bitstream.h  compat.h  ctx-stack.c  entry.c  gl-vdpau-interop.c  gl-vdpau-interop.h  globals.h  h264-parse.c  handle-storage.c  meson.build
src/intel/vulkan_hasvk/libvdpau_va_gl/glsl/: shader-bundle-tool.c
src/loader/: loader.c  loader_wayland_helper.c  pci_id_driver_map.h
src/mapi/: mapi_abi.py
src/util/: 00-mesa-defaults.conf  anon_file.c  driconf.h  u_cpu_detect.c
(+81 files in other folders)
