# Copyright © 2025 Mesa Project
# SPDX-License-Identifier: MIT
#
# Bundled intel-vaapi-driver for hasvk
# This is a fork of intel-vaapi-driver with JPEG support removed
# to prevent GPU hangs and ensure compatibility with hasvk's VDPAU bridge.

# Build the intel-vaapi-driver as part of Mesa
subdir('src')
